# dag-sched

./: README.md  pyproject.toml
dag_sched/: __init__.py  config.py  core.py  dag.py  graph.py  scheduler.py  simulator.py
docs/plans/: 2026-02-18-general-dag-simulator-design.md  2026-02-18-general-dag-simulator-plan.md  2026-05-23-preemptive-scheduling-design.md  2026-05-23-preemptive-scheduling-plan.md
examples/: basic_usage.py
tests/: test_config.py  test_core.py  test_dag.py  test_graph.py  test_preemption.py  test_scheduler.py  test_simulator.py
